feat: three-library fusion + stage checklist with category grouping
- Template-Standard-Knowledge library fusion: chapter_clause_link,
  chapter_field_mapping, chapter_knowledge_card_link tables
- Stage doc checklist: 242 GJB templates across 15 categories,
  auto-generate from templates, sync to document ledger
- Category grouping with collapsible panels in checklist and
  kanban board (reactive Record + v-if for reliable toggle)
- Chapter writing context service for AI-assisted per-chapter
  generation
- Master data extraction service + variable mapping service
- New ChapterWritingGuide.vue component
- Standard parse service enhanced with clause extraction
- Configuration management CRUD services (6 new services)
- Performance: Promise.allSettled for parallel kanban API calls
- 55+ new Java classes: entities, mappers, services, controllers

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>